# glorp

./: .gitignore  Cargo.catalog.toml  Cargo.dvnv.toml  Cargo.poly.toml  README.md  devenv.nix  devenv.yaml
benches/: headless.rs
crates/api/: Cargo.toml
crates/api-codegen/: Cargo.toml
crates/api-codegen/src/: lib.rs  main.rs
crates/api/src/: catalog.rs  command.rs  config.rs  error.rs  event.rs  generated_calls.rs  helper.rs  lib.rs  query.rs  revision.rs  schema.rs  surface.rs  txn.rs  value.rs
crates/api_catalog/: Cargo.toml
crates/api_catalog/src/: lib.rs
crates/api_codegen/: Cargo.toml
crates/api_codegen/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs  output.rs
crates/cli/tests/: acceptance.rs  gui_host_perf.rs
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs  overlay.rs  presentation.rs  telemetry.rs  types.rs
crates/editor/src/editor/: core.rs  document.rs  editing.rs  geometry.rs  history.rs  layout_state.rs  mod.rs  navigation.rs  projection.rs  reducer.rs  selection.rs  session.rs  text.rs
crates/editor/src/scene/: build.rs  data.rs  font.rs  geometry.rs  inspect.rs  mod.rs  text.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  canvas.rs  editor.rs  launcher.rs  lib.rs  main.rs  message.rs  overlay.rs  overlay_view.rs  presentation.rs  presenter.rs  runtime_shell.rs  scene.rs  scene_view.rs  sidebar.rs  telemetry.rs  text_view.rs  theme.rs  types.rs  update.rs  view.rs
crates/gui/src/app/: mod.rs  shell.rs
crates/gui/src/canvas/: geometry.rs  input.rs  mod.rs  state.rs
crates/gui/src/canvas_view/: geometry.rs  input.rs  mod.rs  state.rs
crates/gui/src/panels/: controls.rs  inspect.rs  layout.rs  mod.rs  perf.rs  sidebar.rs  style.rs
crates/gui/src/perf/: bridge.rs  mod.rs  report.rs  store.rs
crates/gui/src/render/: mod.rs  overlay.rs  scene.rs  text.rs
crates/gui/src/ui/: mod.rs  tokens.rs
crates/gui/src/ui/components/: controls.rs  inspect.rs  mod.rs  perf.rs  shell.rs  sidebar.rs
crates/nu-plugin/: Cargo.toml
crates/nu-plugin/src/: commands.rs  completions.rs  lib.rs  main.rs
crates/nu-plugin/tests/: bootstrap.rs
crates/nu_plugin/: Cargo.toml
crates/nu_plugin/src/: commands.rs  lib.rs  main.rs  plugin.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: config_store.rs  events.rs  execute.rs  gui.rs  host.rs  inspect.rs  lib.rs  perf.rs  persistence.rs  project.rs  runtime.rs  scene.rs  state.rs
crates/runtime/src/config/: mod.rs  surface.rs
crates/runtime/src/host/: events.rs  execute.rs  mod.rs  project.rs
crates/runtime/src/nu/: config_eval.rs  engine.rs  mod.rs  schema_export.rs  script_host.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/test_support/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: client.rs  ipc.rs  lib.rs  local.rs  server.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: lib.rs  main.rs
docs/: api.md  config.md  iced-master-migration.md  iced-patterns.md  iced-perf.md  nushell-runtime-architecture.md  scripting.md  transport.md
docs/benchmarks/: headless-edit-baseline-2026-03-13.md  runtime-perf-snapshot-2026-03-16.md
legacy-src/: headless_perf.rs  presentation.rs  text_view.rs
legacy-src/app/: action.rs  headless_tests.rs  mod.rs  sidebar_cache.rs  state.rs  store.rs
legacy-src/canvas_view/: input.rs  mod.rs
legacy-src/editor/: core.rs  document.rs  mod.rs  navigation.rs  selection.rs  session.rs  tests.rs  text.rs
legacy-src/perf/: bridge.rs  report.rs  store.rs
legacy-src/scene/: build.rs  mod.rs  tests.rs  text.rs
legacy-src/ui/components/: inspect.rs  sidebar.rs
nu/: completions.nu  default-config.nu  glorp.nu
schema/: glorp-schema.json
src/: app.rs  canvas_view.rs  editor.rs  headless_perf.rs  lib.rs  main.rs  overlay.rs  overlay_view.rs  perf.rs  presentation.rs  scene.rs  scene_view.rs  telemetry.rs  text_view.rs  types.rs  ui.rs
src/app/: headless.rs  headless_tests.rs  mod.rs  presenter.rs  reducer.rs  session.rs  sidebar_cache.rs  sidebar_data.rs  state.rs  tests.rs  update.rs  view.rs
src/canvas_view/: geometry.rs  input.rs  mod.rs  render.rs  state.rs
src/editor/: core.rs  document.rs  editing.rs  geometry.rs  history.rs  layout.rs  layout_state.rs  mod.rs  navigation.rs  projection.rs  reducer.rs  selection.rs  session.rs  tests.rs  text.rs
src/perf/: bridge.rs  mod.rs  report.rs  store.rs
src/scene/: build.rs  data.rs  dump.rs  font.rs  geometry.rs  inspect.rs  mod.rs  tests.rs  text.rs
src/ui/: mod.rs  tokens.rs
src/ui/components/: controls.rs  dump.rs  inspect.rs  mod.rs  perf.rs  shell.rs  sidebar.rs
