[package]
name = "glorp_host"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
glorp_api = { path = "../api" }
glorp_runtime = { path = "../runtime" }
glorp_transport = { path = "../transport" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
glorp_gui = { path = "../gui" }
glorp_nu_plugin = { path = "../nu-plugin" }
glorp_test_support = { path = "../test-support" }
nu-plugin-test-support.workspace = true
nu-protocol.workspace = true
