[package]
name = "glorp_gui"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
cosmic-text.workspace = true
glorp_api = { path = "../api" }
glorp_editor = { path = "../editor" }
glorp_runtime = { path = "../runtime" }
glorp_transport = { path = "../transport" }
iced.workspace = true
serde_json.workspace = true
tracing.workspace = true
