[package]
name = "glorp_nu_plugin"
autobins = false
version.workspace = true
edition.workspace = true

[[bin]]
name = "nu_plugin_glorp"
path = "src/main.rs"

[dependencies]
glorp_api = { path = "../api" }
glorp_transport = { path = "../transport" }
nu-plugin.workspace = true
nu-protocol.workspace = true
serde_json.workspace = true

[dev-dependencies]
glorp_runtime = { path = "../runtime" }
glorp_test_support = { path = "../test-support" }
nu-plugin-test-support.workspace = true
