[package]
name = "glorp_runtime"
version.workspace = true
edition.workspace = true

[dependencies]
cosmic-text.workspace = true
glorp_api = { path = "../api" }
glorp_editor = { path = "../editor" }
iced.workspace = true
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
