[package]
name = "glorp_transport"
version.workspace = true
edition.workspace = true

[dependencies]
glorp_api = { path = "../api" }
glorp_runtime = { path = "../runtime" }
nu_session_ipc = { path = "../../../nu_session/crates/ipc" }
nu_session_protocol_glorp = { path = "../../../nu_session/crates/protocol_glorp" }
serde.workspace = true
serde_json.workspace = true
