[package]
name = "glorp_transport"
version.workspace = true
edition.workspace = true

[dependencies]
glorp_api = { path = "../api" }
glorp_editor = { path = "../editor" }
glorp_runtime = { path = "../runtime" }
nu_session_ipc = { path = "../../../nu_session/crates/ipc" }
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
serde.workspace = true
serde_json.workspace = true
